--- a/css/main.css
+++ b/css/main.css
@@ -222,6 +222,13 @@ body.login__page {
 
 
 
+header {
+    position: fixed;
+    z-index : 99999;
+    left    : 0;
+    right   : 0;
+    top     : 0;
+}
 
 body.main__page {
     font-family: Montserrat, sans-serif;
@@ -350,35 +357,35 @@ body.main__page {
 
 .navigation {
     background-color: #fff;
-    padding: 15px 0;
-    position: relative;
+    padding         : 15px 0;
+    position        : relative;
 }
 
 .nav__container {
-    margin: 0 auto;
-    display: flex;
+    margin         : 0 auto;
+    display        : flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
+    align-items    : center;
+    padding        : 0 20px;
 }
 
 .nav__links {
     display: flex;
-    gap: 49px;
+    gap    : 49px;
 }
 
 .nav__links a {
     text-decoration: none;
-    color: #000000;
-    position: relative;
-    padding: 5px 0;
-    transition: all 0.3s ease;
-    font-family: Montserrat;
-    font-weight: 700;
-    font-style: Bold;
-    font-size: 12px;
-    line-height: 100%;
-    letter-spacing: 0%;
+    color          : #000000;
+    position       : relative;
+    padding        : 5px 0;
+    transition     : all 0.3s ease;
+    font-family    : Montserrat;
+    font-weight    : 700;
+    font-style     : Bold;
+    font-size      : 12px;
+    line-height    : 100%;
+    letter-spacing : 0%;
 }
 
 .nav__links a:hover {
@@ -386,46 +393,212 @@ body.main__page {
 }
 
 .nav__links a::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0;
-    height: 2px;
+    content         : '';
+    position        : absolute;
+    bottom          : 0;
+    left            : 0;
+    width           : 0;
+    height          : 2px;
     background-color: #2e3031;
-    transition: width 0.3s ease;
+    transition      : width 0.3s ease;
 }
 
 .nav__links a:hover::after {
-    width: 100%;
+    width     : 100%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.507);
 }
 
 /* Кнопка закрытия для мобильной версии */
 .mobile-close-btn {
-    display: none;
-    position: absolute;
-    top: 20px;
-    right: 20px;
+    display  : none;
+    position : absolute;
+    top      : 20px;
+    right    : 20px;
     font-size: 30px;
-    cursor: pointer;
-    color: #333;
-    z-index: 1001;
+    cursor   : pointer;
+    color    : #333;
+    z-index  : 1001;
 }
 
 .hamburger {
-    display: none;
+    display       : none;
     flex-direction: column;
-    cursor: pointer;
-    padding: 5px;
+    cursor        : pointer;
+    padding       : 5px;
 }
 
 .hamburger span {
-    width: 25px;
-    height: 3px;
+    width           : 25px;
+    height          : 3px;
     background-color: #333;
-    margin: 3px 0;
-    transition: all 0.3s ease;
+    margin          : 3px 0;
+    transition      : all 0.3s ease;
+}
+
+
+
+.hero {
+    min-height     : 800px;
+    margin-top     : 150px;
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    background     : url(../img/background.svg);
+    animation      : gradientBG 15s ease infinite;
+    overflow       : hidden;
+}
+
+
+@keyframes gradientBG {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+
+.hero__container {
+    display        : flex;
+    flex-direction : column;
+    align-items    : center;
+    justify-content: center;
+    color          : #FFFFFF;
+}
+
+.hero__container h1 {
+    font-family   : Montserrat;
+    font-weight   : 700;
+    font-style    : Bold;
+    font-size     : 40px;
+    line-height   : 100%;
+    letter-spacing: 0%;
+    text-align    : center;
+    max-width     : 782px;
+
+}
+
+.hero__container p {
+    font-family   : Montserrat;
+    font-weight   : 400;
+    font-style    : Regular;
+    font-size     : 14px;
+    line-height   : 100%;
+    letter-spacing: 0%;
+    text-align    : center;
+    margin-bottom : 25px;
+    max-width     : 725px;
+}
+
+
+
+
+
+.button {
+    all                        : unset;
+    cursor                     : pointer;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    position                   : relative;
+    border-radius              : 100em;
+    max-width                  : 240px;
+    height                     : 60px;
+    display                    : inline-block;
+    box-shadow                 : -0.15em -0.15em 0.15em -0.075em rgba(5, 5, 5, 0.25),
+        0.0375em 0.0375em 0.0675em 0 rgba(5, 5, 5, 0.1);
+}
+
+.button::after {
+    content       : "";
+    position      : absolute;
+    z-index       : 0;
+    width         : calc(100% + 0.3em);
+    height        : calc(100% + 0.3em);
+    top           : -0.15em;
+    left          : -0.15em;
+    border-radius : inherit;
+    background    : linear-gradient(-135deg, rgba(5, 5, 5, 0.5), transparent 20%, transparent 100%);
+    filter        : blur(0.0125em);
+    opacity       : 0.25;
+    mix-blend-mode: multiply;
+}
+
+.button__outer {
+    position     : relative;
+    z-index      : 1;
+    border-radius: inherit;
+    transition   : box-shadow 300ms ease;
+    will-change  : box-shadow;
+    box-shadow   : 0 0.05em 0.05em -0.01em rgba(5, 5, 5, 1),
+        0 0.01em 0.01em -0.01em rgba(5, 5, 5, 0.5),
+        0.15em 0.3em 0.1em -0.01em rgba(5, 5, 5, 0.25);
+}
+
+.button:hover .button__outer {
+    box-shadow: 0 0 0 0 rgba(5, 5, 5, 1),
+        0 0 0 0 rgba(5, 5, 5, 0.5),
+        0 0 0 0 rgba(5, 5, 5, 0.25);
+}
+
+.button__inner {
+    --inset         : 0.035em;
+    position        : relative;
+    z-index         : 1;
+    border-radius   : inherit;
+    padding         : 15px 35px;
+    background-image: linear-gradient(135deg, #E05100, #C04600);
+    transition      : box-shadow 300ms ease, clip-path 250ms ease, background-image 250ms ease, transform 250ms ease;
+    will-change     : box-shadow, clip-path, background-image, transform;
+    overflow        : clip;
+    clip-path       : inset(0 0 0 0 round 100em);
+    box-shadow      : 0 0 0 0 inset rgba(5, 5, 5, 0.1),
+        -0.05em -0.05em 0.05em 0 inset rgba(5, 5, 5, 0.25),
+        0 0 0 0 inset rgba(5, 5, 5, 0.1),
+        0 0 0.05em 0.2em inset rgba(255, 255, 255, 0.25),
+        0.025em 0.05em 0.1em 0 inset rgba(255, 255, 255, 1),
+        0.12em 0.12em 0.12em inset rgba(255, 255, 255, 0.25),
+        -0.075em -0.25em 0.25em 0.1em inset rgba(5, 5, 5, 0.25);
+}
+
+.button:hover .button__inner {
+    clip-path: inset(clamp(1px, 0.0625em, 2px) clamp(1px, 0.0625em, 2px) clamp(1px, 0.0625em, 2px) clamp(1px, 0.0625em, 2px) round 100em);
+    box-shadow: 0.1em 0.15em 0.05em 0 inset rgba(5, 5, 5, 0.75),
+        -0.025em -0.03em 0.05em 0.025em inset rgba(5, 5, 5, 0.5),
+        0.25em 0.25em 0.2em 0 inset rgba(5, 5, 5, 0.5),
+        0 0 0.05em 0.5em inset rgba(255, 255, 255, 0.15),
+        0 0 0 0 inset rgba(255, 255, 255, 1),
+        0.12em 0.12em 0.12em inset rgba(255, 255, 255, 0.25),
+        -0.075em -0.12em 0.2em 0.1em inset rgba(5, 5, 5, 0.25);
+}
+
+.button__text {
+    position           : relative;
+    z-index            : 4;
+    font-family        : "Inter", sans-serif;
+    letter-spacing     : -0.05em;
+    font-weight        : 500;
+    color              : white;
+    transition         : transform 250ms ease;
+    display            : block;
+    will-change        : transform;
+    text-shadow        : rgba(0, 0, 0, 0.1) 0 0 0.1em;
+    -webkit-user-select: none;
+    -moz-user-select   : none;
+    -ms-user-select    : none;
+    user-select        : none;
+}
+
+.button:hover .button__text {
+    transform: scale(0.975);
+}
+
+.button:active .button__inner {
+    transform: scale(0.975);
 }
 
 
@@ -439,6 +612,143 @@ body.main__page {
 
 
 
+
+
+.card {
+    width        : 240px;
+    height       : 224px;
+    background   : #FFFFFF;
+    transition   : all 0.4s;
+    border-radius: 10px;
+    box-shadow   : 4px 4px 20px 0px #00000040;
+    font-size    : 12px;
+    font-weight  : 400;
+    margin       : 15px;
+    overflow     : hidden;
+}
+
+.card:hover {
+    border-radius: 15px;
+    cursor       : pointer;
+    transform    : scale(1.2);
+    box-shadow   : 0px 0px 10px 5px rgba(0, 0, 0, 0.705);
+    background   : rgb(240, 205, 109);
+}
+
+.first__content {
+    height         : 100%;
+    width          : 100%;
+    transition     : all 0.4s;
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    opacity        : 1;
+    border-radius  : 15px;
+}
+
+.card:hover .first__content {
+    height : 0px;
+    opacity: 0;
+}
+
+.second__content {
+    height         : 0%;
+    width          : 100%;
+    opacity        : 0;
+    display        : flex;
+    justify-content: center;
+    align-items    : center;
+    border-radius  : 15px;
+    transition     : all 0.4s;
+    transform      : rotate(90deg) scale(-1);
+    font-weight    : 700;
+    font-style     : Bold;
+    font-size      : 10px;
+    line-height    : 100%;
+    text-align     : center;
+    color          : #000000;
+}
+
+.card:hover .second__content {
+    opacity  : 1;
+    height   : 100%;
+    font-size: 1.8rem;
+    transform: rotate(0deg);
+}
+
+.product__container {
+    padding: 50px 0;
+}
+
+.product__box {
+    display        : flex;
+    flex-wrap      : wrap;
+    justify-content: center;
+    align-items    : center;
+    gap            : 20px;
+    margin-bottom  : 50px;
+}
+
+.product__box img {
+    width : 176px;
+    height: 114px;
+}
+
+.product .button {
+    display: block;
+    margin : 0 auto;
+}
+
+.about {
+    background: #404040;
+}
+
+.about__container {
+    display        : flex;
+    justify-content: space-between;
+    align-items    : center;
+}
+
+.about__container img {
+    max-width : 748px;
+    max-height: 748px;
+}
+
+.about__box {
+    padding-left: 30px;
+    color       : #FFFFFF;
+}
+
+.about__box h2 {
+    font-family   : Montserrat;
+    font-weight   : 700;
+    font-style    : Bold;
+    font-size     : 35px;
+    line-height   : 100%;
+    letter-spacing: 0%;
+    margin-bottom : 30px;
+}
+
+.about__box h4 {
+    font-family   : Montserrat;
+    font-weight   : 700;
+    font-style    : Bold;
+    font-size     : 20px;
+    line-height   : 100%;
+    letter-spacing: 0%;
+    margin-bottom : 25px;
+}
+
+.about__box p {
+    font-family   : Montserrat;
+    font-weight   : 400;
+    font-style    : Regular;
+    font-size     : 12px;
+    line-height   : 100%;
+    letter-spacing: 0%;
+    margin-bottom : 25px;
+    max-width     : 705px;
+}
 
 
 
@@ -481,9 +791,9 @@ body.main__page {
 
     .icons__phone {
         flex-direction: column;
-        gap: 0;
+        gap           : 0;
     }
-     
+
 
     .icons__text {
         display    : none;
@@ -517,24 +827,24 @@ body.main__page {
 
 
 
-.hamburger {
+    .hamburger {
         display: flex;
     }
 
     .nav__links {
-        position: fixed;
-        top: 0;
-        right: -100%;
-        height: 100vh;
-        width: 70%;
+        position        : fixed;
+        top             : 0;
+        right           : -100%;
+        height          : 100vh;
+        width           : 70%;
         background-color: #fff;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 30px;
-        transition: right 0.4s ease;
-        box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
-        z-index: 1000;
+        flex-direction  : column;
+        justify-content : center;
+        align-items     : center;
+        gap             : 30px;
+        transition      : right 0.4s ease;
+        box-shadow      : -5px 0 15px rgba(0, 0, 0, 0.1);
+        z-index         : 1000;
     }
 
     .nav__links.active {
@@ -557,5 +867,60 @@ body.main__page {
         transform: rotate(-45deg) translate(7px, -6px);
     }
 
-    
+    .card {
+        width        : 160px;
+        height       : 180px;
+        background   : #FFFFFF;
+        transition   : all 0.4s;
+        border-radius: 10px;
+        box-shadow   : 4px 4px 20px 0px #00000040;
+        font-size    : 12px;
+        font-weight  : 400;
+        margin       : 15px;
+        overflow     : hidden;
+    }
+
+    .product__box img {
+        width : 156px;
+        height: 94px;
+    }
+
+    .second__content {
+        height         : 0%;
+        width          : 100%;
+        opacity        : 0;
+        display        : flex;
+        justify-content: center;
+        align-items    : center;
+        border-radius  : 15px;
+        transition     : all 0.4s;
+        transform      : rotate(90deg) scale(-1);
+        font-weight    : 600;
+        font-style     : Bold;
+        font-size      : 8px;
+        line-height    : 80%;
+        text-align     : center;
+        color          : #000000;
+    }
+
+    .card:hover .second__content {
+        opacity  : 1;
+        height   : 100%;
+        font-size: 1rem;
+        transform: rotate(0deg);
+    }
+
+    .about__container {
+        display        : flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items    : center;
+        text-align: center;
+    }
+
+    .about__container img {
+        max-width : 748px;
+        max-height: 748px;
+        margin-bottom: 15px;
+    }
 }
