--- a/css/main.css
+++ b/css/main.css
@@ -868,7 +868,7 @@ body.main__page {
     }
 
     .card {
-        width        : 160px;
+        width        : 150px;
         height       : 180px;
         background   : #FFFFFF;
         transition   : all 0.4s;
@@ -881,8 +881,16 @@ body.main__page {
     }
 
     .product__box img {
-        width : 156px;
+        width : 146px;
         height: 94px;
+    }
+
+    .product__box {
+        display        : flex;
+        flex-wrap      : wrap;
+        align-items    : center;
+        gap            : 20px;
+        margin-bottom  : 50px;
     }
 
     .second__content {
@@ -912,15 +920,15 @@ body.main__page {
 
     .about__container {
         display        : flex;
-        flex-direction: column;
+        flex-direction : column;
         justify-content: space-between;
         align-items    : center;
-        text-align: center;
+        text-align     : center;
     }
 
     .about__container img {
-        max-width : 748px;
-        max-height: 748px;
+        max-width    : 748px;
+        max-height   : 748px;
         margin-bottom: 15px;
     }
 }
