--- a/css/main.css
+++ b/css/main.css
@@ -755,6 +755,112 @@ body.main__page {
 
 
 
+.goods__boxes {
+    display              : grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap                  : 20px;
+}
+
+.goods__item {
+    display: flex;
+    gap    : 10px;
+
+}
+
+.goods__box {
+    background   : #fff;
+    padding      : 15px;
+    border-radius: 8px;
+    width        : 300px;
+    text-align   : center;
+    cursor       : pointer;
+    box-shadow: 4px 4px 20px 0px #00000040;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+
+.goods__image {
+    width        : 283px;
+    height       : 172px;
+    object-fit   : cover;
+    border-radius: 5px;
+    background   : none;
+}
+
+.goods__title {
+    margin     : 10px 0 5px;
+    font-weight: bold;
+}
+
+.goods__desc {
+    font-size    : 14px;
+    color        : #666;
+    box-shadow   : 0 1px 2px rgba(0, 0, 0, 0.1);
+    padding      : 5px;
+    border-radius: 4px;
+}
+
+.goods__colors {
+    display        : flex;
+    justify-content: center;
+    gap            : 6px;
+    margin-top     : 10px;
+}
+
+.goods__color {
+    width        : 16px;
+    height       : 16px;
+    border-radius: none;
+    cursor       : pointer;
+    border       : 2px solid transparent;
+}
+
+.goods__color.active {
+    border    : 2px solid #fff;
+    box-shadow: 0 0 0 2px #000;
+}
+
+.goods__sidebar {
+    width                     : 250px;
+    background                : #404040;
+    border-top-right-radius   : 30px;
+    border-bottom-right-radius: 30px;
+    padding-top               : 20px;
+    padding-left              : 20px;
+    display                   : none;
+    flex-direction            : column;
+    justify-content           : space-between;
+    color                     : #fff;
+}
+
+.goods__sidebar.active {
+    display: flex;
+}
+
+.goods__sidebar-text {
+    font-size    : 16px;
+    margin-bottom: 10px;
+    font-weight  : 700;
+    font-style   : bold;
+}
+
+.goods__plus {
+    align-self                : flex-end;
+    width                     : 69px;
+    height                    : 56px;
+    border-top-left-radius    : 30px;
+    border-bottom-right-radius: 30px;
+    background                : #E05100;
+    display                   : flex;
+    align-items               : center;
+    justify-content           : center;
+    font-size                 : 25px;
+    cursor                    : pointer;
+    color                     : #fff;
+}
+
+
+
 
 
 
@@ -807,7 +913,7 @@ body.main__page {
     }
 
     .header:hover {
-        padding-bottom: 80px;
+        padding-bottom: 90px;
     }
 
     .icons__button {
@@ -886,11 +992,11 @@ body.main__page {
     }
 
     .product__box {
-        display        : flex;
-        flex-wrap      : wrap;
-        align-items    : center;
-        gap            : 20px;
-        margin-bottom  : 50px;
+        display      : flex;
+        flex-wrap    : wrap;
+        align-items  : center;
+        gap          : 20px;
+        margin-bottom: 50px;
     }
 
     .second__content {
@@ -931,5 +1037,21 @@ body.main__page {
         max-height   : 348px;
         border-radius: 35px;
         margin-bottom: 15px;
+    }
+
+
+
+
+    .goods__boxes {
+        margin-top: 50px;
+        display              : flex;
+        flex-direction: column;
+        grid-template-columns: repeat(2, 1fr);
+        gap                  : 20px;
+    }
+
+    .goods__item {
+        display: flex;
+        gap    : 10px;
     }
 }
