--- a/css/main.css
+++ b/css/main.css
@@ -768,14 +768,14 @@ body.main__page {
 }
 
 .goods__box {
-    background   : #fff;
-    padding      : 15px;
-    border-radius: 8px;
-    width        : 300px;
-    text-align   : center;
-    cursor       : pointer;
-    box-shadow: 4px 4px 20px 0px #00000040;
-    border-top-left-radius: 30px;
+    background               : #fff;
+    padding                  : 15px;
+    border-radius            : 8px;
+    width                    : 300px;
+    text-align               : center;
+    cursor                   : pointer;
+    box-shadow               : 4px 4px 20px 0px #00000040;
+    border-top-left-radius   : 30px;
     border-bottom-left-radius: 30px;
 }
 
@@ -1043,9 +1043,9 @@ body.main__page {
 
 
     .goods__boxes {
-        margin-top: 50px;
+        margin-top           : 50px;
         display              : flex;
-        flex-direction: column;
+        flex-direction       : column;
         grid-template-columns: repeat(2, 1fr);
         gap                  : 20px;
     }
@@ -1054,4 +1054,38 @@ body.main__page {
         display: flex;
         gap    : 10px;
     }
+
+    .goods__box {
+        background               : #fff;
+        padding                  : 15px;
+        border-radius            : 8px;
+        width                    : 220px;
+        text-align               : center;
+        cursor                   : pointer;
+        box-shadow               : 4px 4px 20px 0px #00000040;
+        border-top-left-radius   : 30px;
+        border-bottom-left-radius: 30px;
+    }
+
+    .goods__image {
+        width        : 183px;
+        height       : 72px;
+        object-fit   : contain;
+        border-radius: 5px;
+        background   : none;
+    }
+
+    .goods__sidebar {
+        width                     : 200px;
+        background                : #404040;
+        border-top-right-radius   : 30px;
+        border-bottom-right-radius: 30px;
+        padding-top               : 20px;
+        padding-left              : 20px;
+        display                   : none;
+        flex-direction            : column;
+        justify-content           : space-between;
+        color                     : #fff;
+    }
+
 }
