--- a/css/main.css
+++ b/css/main.css
@@ -992,9 +992,10 @@ iframe {
     padding      : 30px;
     box-shadow   : 4px 4px 20px 0px #00000040;
 }
-.property__items:hover{
-    box-shadow   : 4px 4px 20px 0px #c46c0841;
-    border: 1px solid #4d1c1c;
+
+.property__items:hover {
+    box-shadow: 4px 4px 20px 0px #c46c0841;
+    border    : 1px solid #4d1c1c;
 }
 
 .property__items img {
@@ -1025,8 +1026,100 @@ iframe {
 
 }
 
+.footer {
+    padding: 50px 0;
+}
+
+.footer__first {
+    display        : flex;
+    justify-content: space-between;
+    align-items    : center;
+    margin-bottom  : 25px;
+}
+
+.footer__item {
+    display    : flex;
+    align-items: center;
+    gap        : 15px;
+    margin     : 10px 0;
+}
+
+.footer__text {
+    display       : flex;
+    flex-direction: column;
+}
+
+.footer__container p {
+    text-align: center;
+}
+
+.footer__first a {
+    font-family   : Roboto;
+    font-weight   : 400;
+    font-style    : Regular;
+    font-size     : 12px;
+    line-height   : 100%;
+    letter-spacing: 0%;
+    color         : #000000;
+    padding-bottom: 15px;
+}
+
+.footer__first h6 {
+    font-family   : Roboto;
+    font-weight   : 700;
+    font-style    : Bold;
+    font-size     : 20px;
+    line-height   : 100%;
+    letter-spacing: 0%;
+    color         : #E05100;
+}
+
+.footer__list {
+    display: flex;
+    gap    : 35px;
+}
+
+.footer__items {
+    display       : flex;
+    flex-direction: column;
+    gap           : 25px;
+}
 
 
+
+.footer__link{
+    text-decoration: none;
+    color          : #000000;
+    position       : relative;
+    padding        : 5px 0;
+    transition     : all 0.3s ease;
+    font-family    : Montserrat;
+    font-weight    : 700;
+    font-style     : Bold;
+    font-size      : 12px;
+    line-height    : 100%;
+    letter-spacing : 0%;
+}
+
+.footer__link:hover {
+    color: #202020e5;
+}
+
+.footer__link::after {
+    content         : '';
+    position        : absolute;
+    bottom          : 0;
+    left            : 0;
+    width           : 0;
+    height          : 1px;
+    background-color: #eb540fe5;
+    transition      : width 0.3s ease;
+}
+
+.footer__link:hover::after {
+    width     : 100%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.507);
+}
 
 
 
@@ -1334,6 +1427,63 @@ iframe {
         font-size     : 8px;
         line-height   : 100%;
         letter-spacing: 0%;
-        width: 130px;
+        width         : 130px;
     }
+
+    .footer__first {
+        display        : flex;
+        align-items    : center;
+        margin-bottom  : 25px;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer__item {
+        display    : flex;
+        align-items: center;
+        gap        : 10px;
+        margin     : 10px 0;
+    }
+
+    .footer__text {
+        display       : flex;
+        flex-direction: column;
+    }
+
+    .footer__container p {
+        text-align: center;
+    }
+
+    .footer__first a {
+        font-family   : Roboto;
+        font-weight   : 400;
+        font-style    : Regular;
+        font-size     : 12px;
+        line-height   : 100%;
+        letter-spacing: 0%;
+        color         : #000000;
+        padding-bottom: 15px;
+    }
+
+    .footer__first h6 {
+        font-family   : Roboto;
+        font-weight   : 700;
+        font-style    : Bold;
+        font-size     : 16px;
+        line-height   : 100%;
+        letter-spacing: 0%;
+        color         : #E05100;
+    }
+
+    .footer__list {
+        display: flex;
+        gap    : 15px;
+    }
+
+    .footer__items {
+        display       : flex;
+        flex-direction: column;
+        gap           : 25px;
+    }
+
 }
